--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             // For training
-            "args": ["--config", "./config/dino_training.yaml"]
+            "args": ["--config", "./config/dino_training.yaml", "--model_path", "./ckpt/E2EParking-epoch=14-val_loss=0.91.ckpt"]
             // For testing
             // "args": ["--model_config_path", "./config/dino_training.yaml", "--model_path", "./ckpt/dinov2_vib14_relabel/E2EParking-epoch=43-val_loss=1.99.ckpt", "--model_path_dynamic", "./milestone/dynamic_control_speed.ckpt", "--show_eva_imgs", "True"]
         }
