--- a/config/dino_training.yaml
+++ b/config/dino_training.yaml
@@ -7,12 +7,12 @@ parking_model:
   check_val_every_n_epoch: 1
 
   epochs: 40 # 26
-  learning_rate: 0.0001
+  learning_rate: 0.001
   weight_decay: 0.0001
   batch_size: 16 # 16
 
-  training_map: "e2e_parking/Town04_Opt" #/vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # "/vast/rs9193/Town_Opt_1000"
-  validation_map: "e2e_parking/Town04_Opt_Val" #/vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # "/scratch/rs9193/Town_Opt_1000_Val"
+  training_map: "e2e_parking/Town_Opt_1000" #/vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # "/vast/rs9193/Town_Opt_1000"
+  validation_map: "e2e_parking/Town_Opt_1000_Val" #/vast/sy3913/egocentric_speed_dataset/e2e_dataset/ # "/scratch/rs9193/Town_Opt_1000_Val"
   # training_map: "/scratch/rs9193/dynamics_1/" #/scratch/rs9193/dynamics_1/ # "/vast/rs9193/Town_Opt_1000"
   # validation_map: "/scratch/rs9193/dynamics_1/" #/scratch/rs9193/dynamics_1/ # "/scratch/rs9193/Town_Opt_1000_Val"
   future_frame_nums: 4
@@ -62,14 +62,17 @@ parking_model:
   hybrid_ckpt_path: "./ckpt/exp_2025_7_11_2_2_41/E2EParking-epoch=03-val_loss=1.73.ckpt"
 
   # diffusion parameters
-  horizon: 128
+  # horizon: 16
   observation_dim: 9
   action_dim: 3
   diffusion_feat_dim: 3
-  n_timesteps: 10
+  n_timesteps: 30
   loss_type: 'l1'
   clip_denoised: False
-  predict_epsilon: True
+  predict_epsilon: False
   action_weight: 1.0
   loss_discount: 1.0
   loss_weights: null
+  planner_type: global_interp # local, global, local_interp, global_interp
+  normalize_traj: True
+  motion_head: embedding
