--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,9 +12,9 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             // For training
-            "args": ["--config", "./config/dino_training.yaml", "--model_path", "./ckpt/E2EParking-epoch=14-val_loss=0.91.ckpt"]
+            "args": ["--config", "./config/dino_training.yaml"]
             // For testing
-            // "args": ["--model_config_path", "./config/dino_training.yaml", "--model_path", "./ckpt/new/last.ckpt", "--model_path_dynamic", "./milestone/dynamic_control_speed.ckpt", "--show_eva_imgs", "True"]
+            // "args": ["--model_config_path", "./config/dino_training.yaml", "--model_path", "./ckpt/global_embedding/last.ckpt", "--model_path_dynamic", "./milestone/dynamic_control_speed.ckpt", "--show_eva_imgs", "True"]
         }
     ]
 }
